--- a/views/home.html
+++ b/views/home.html
@@ -1,11 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mercado Liebre</title>
 </head>
+
 <body>
-    
+    <header>
+        <img src="/img/logo-mercado-liebre.svg" alt="">
+        <form action="/buscar" method="GET">
+            <input type="text" name="q" placeholder="Buscar...">
+            <button type="submit">Buscar</button>
+        </form>
+        <p>Comprá en cuotas y sin tarjeta de crédito</p>
+        <section>
+            <nav>
+                <ul>
+                    <li><a href="#">Ofertas</a></li>
+                    <li><a href="#">Tiendas Oficiales</a></li>
+                    <li><a href="#">vender</a></li>
+                    <li><a href="#">Ayuda</a></li>
+                    <li><a href="#">Creá tu cuenta</a></li>
+                    <li><a href="#">ingresá</a></li>
+                    <li><a href="#">Mis compras</a></li>
+                </ul>
+            </nav>
+        </section>
+        <img src="/img/img-home-banner.jpg" alt="" width="320">
+    </header>
+    <main>
+        <section>
+            <h3>Basado en tu última visita</h3>
+            <article>
+                <img src="/img/img-cafetera-moulinex.jpg" alt="" width="320">
+                <p>$6.770</p>
+                <p>40% OFF</p>
+                <p>Cafetera Moulinex</p>
+            </article>
+            <article>
+                <img src="/img/img-macbook-pro-2019.jpg" alt="" width="320">
+                <p>$230.000</p>
+                <p>20% OFF</p>
+                <p>MacBook Pro 2019</p>
+            </article>
+            <article>
+                <img src="/img/img-samsung-galaxy-s10.jpg" alt="" width="320">
+                <p>$70.500</p>
+                <p>10% OFF</p>
+                <p>Samsung Galaxy S10</p>
+            </article>
+            <article>
+                <img src="/img/img-tv-samsung-smart.jpg" alt="" width="320">
+                <p>$23.200</p>
+                <p>5% OFF</p>
+                <p>SmartTv Samsung 43"</p>
+            </article>
+        </section>
+        <section>
+            <h3>Ofertas</h3>
+            <article>
+                <img src="/img/img-cafetera-moulinex.jpg" alt="" width="320">
+                <p>$6.770</p>
+                <p>40% OFF</p>
+                <p>Cafetera Moulinex</p>
+            </article>
+            <article>
+                <img src="/img/img-macbook-pro-2019.jpg" alt="" width="320">
+                <p>$230.000</p>
+                <p>20% OFF</p>
+                <p>MacBook Pro 2019</p>
+            </article>
+            <article>
+                <img src="/img/img-samsung-galaxy-s10.jpg" alt="" width="320">
+                <p>$70.500</p>
+                <p>10% OFF</p>
+                <p>Samsung Galaxy S10</p>
+            </article>
+            <article>
+                <img src="/img/img-tv-samsung-smart.jpg" alt="" width="320">
+                <p>$23.200</p>
+                <p>5% OFF</p>
+                <p>SmartTv Samsung 43"</p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        <h3>Pagá con tarjeta o en efectivo</h3>
+        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+            puntos de pago. ¡Y siempre es seguro!</p>
+
+        <h3>Envío gratis desde $2.500</h3>
+        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
+            Mercado Puntos.</p>
+
+        <h3>Seguridad, de principio a fin</h3>
+        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+            porque estás siempre protegid@.</p>
+
+        <h3>Copyright © 1999-2020 MercadoLiebre S.R.L.</h3>
+    </footer>
 </body>
-</html>
