--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
             <button type="submit">Buscar</button>
         </form>
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
-        <section>
+        <div>
             <nav>
                 <ul>
                     <li><a href="#">Ofertas</a></li>
@@ -29,7 +29,7 @@
                     <li><a href="#">Mis compras</a></li>
                 </ul>
             </nav>
-        </section>
+        </div>
         <img src="/img/img-home-banner.jpg" alt="" width="320">
     </header>
     <main>
@@ -39,25 +39,25 @@
                 <img src="/img/img-cafetera-moulinex.jpg" alt="" width="320">
                 <p>$6.770</p>
                 <p>40% OFF</p>
-                <p>Cafetera Moulinex</p>
+                <h2>Cafetera Moulinex</h2>
             </article>
             <article>
                 <img src="/img/img-macbook-pro-2019.jpg" alt="" width="320">
                 <p>$230.000</p>
                 <p>20% OFF</p>
-                <p>MacBook Pro 2019</p>
+                <h2>MacBook Pro 2019</h2>
             </article>
             <article>
                 <img src="/img/img-samsung-galaxy-s10.jpg" alt="" width="320">
                 <p>$70.500</p>
                 <p>10% OFF</p>
-                <p>Samsung Galaxy S10</p>
+                <h2>Samsung Galaxy S10</h2>
             </article>
             <article>
                 <img src="/img/img-tv-samsung-smart.jpg" alt="" width="320">
                 <p>$23.200</p>
                 <p>5% OFF</p>
-                <p>SmartTv Samsung 43"</p>
+                <h2>SmartTv Samsung 43"</h2>
             </article>
         </section>
         
@@ -67,25 +67,25 @@
                 <img src="/img/img-cafetera-moulinex.jpg" alt="" width="320">
                 <p>$6.770</p>
                 <p>40% OFF</p>
-                <p>Cafetera Moulinex</p>
+                <h2>Cafetera Moulinex</h2>
             </article>
             <article>
                 <img src="/img/img-macbook-pro-2019.jpg" alt="" width="320">
                 <p>$230.000</p>
                 <p>20% OFF</p>
-                <p>MacBook Pro 2019</p>
+                <h2>MacBook Pro 2019</h2>
             </article>
             <article>
                 <img src="/img/img-samsung-galaxy-s10.jpg" alt="" width="320">
                 <p>$70.500</p>
                 <p>10% OFF</p>
-                <p>Samsung Galaxy S10</p>
+                <h2>Samsung Galaxy S10</h2>
             </article>
             <article>
                 <img src="/img/img-tv-samsung-smart.jpg" alt="" width="320">
                 <p>$23.200</p>
                 <p>5% OFF</p>
-                <p>SmartTv Samsung 43"</p>
+                <h2>SmartTv Samsung 43"</h2>
             </article>
         </section>
     </main>
