--- a/views/home.html
+++ b/views/home.html
@@ -5,34 +5,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mercado Liebre</title>
+    <script src="https://kit.fontawesome.com/700da961d8.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
-    <header>
-        <img src="/img/logo-mercado-liebre.svg" alt="">
+    <header class="home__header">
+        <img class="home__header__logo" src="/img/logo-mercado-liebre.svg" alt="">
         <form action="/buscar" method="GET">
-            <input type="text" name="q" placeholder="Buscar...">
-            <button type="submit">Buscar</button>
+            <div class="home__header__busqueda">
+                <input class="home__header__busqueda-barra" type="text" name="q" placeholder="Buscar productos, marcar">
+                <button class="home__header__busqueda-boton" type="submit"><i class="fas fa-search"></i></button>
+            </div>
         </form>
-        <p>Comprá en cuotas y sin tarjeta de crédito</p>
-        <div>
-            <nav>
-                <ul>
-                    <li><a href="#">Ofertas</a></li>
-                    <li><a href="#">Tiendas Oficiales</a></li>
-                    <li><a href="#">vender</a></li>
-                    <li><a href="#">Ayuda</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Creá tu cuenta</a></li>
-                    <li><a href="#">ingresá</a></li>
-                    <li><a href="#">Mis compras</a></li>
-                </ul>
-            </nav>
-        </div>
-        <img src="/img/img-home-banner.jpg" alt="" width="320">
+        <p class="home__header__p-pagos"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de
+            crédito</p>
+        <nav class="home__header__nav-menu">
+            <ul class="home__header__nav-menu-superior">
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Tiendas Oficiales</a></li>
+                <li><a href="#">vender</a></li>
+                <li><a href="#">Ayuda</a></li>
+            </ul>
+            <ul class="home__header__nav-menu-inferior">
+                <li><a href="#">Creá tu cuenta</a> <i class="fa-regular fa-address-card"></i></li>
+                <li><a href="#">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i></li>
+                <li><a href="#">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i></li>
+            </ul>
+        </nav>
+        <nav class="home__header__nav-burger-menu">
+            <div class="home__header__div__burger-menu">
+                <i class="fas fa-bars"></i>
+            </div>
+        </nav>
+
     </header>
     <main>
+        <img src="/img/img-home-banner.jpg" alt="" width="320">
         <section>
             <h3>Basado en tu última visita</h3>
             <article>
@@ -60,7 +69,7 @@
                 <h2>SmartTv Samsung 43"</h2>
             </article>
         </section>
-        
+
         <section>
             <h3>Ofertas</h3>
             <article>
@@ -89,19 +98,27 @@
             </article>
         </section>
     </main>
-    <footer>
-        <h3>Pagá con tarjeta o en efectivo</h3>
-        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro!</p>
+    <footer class="home__footer">
+        <article class="home__footer-article">
+            <i class="fa-solid fa-credit-card"></i>
+            <h3>Pagá con tarjeta o en efectivo</h3>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!</p>
+        </article>
+        <article class="home__footer-article">
+            <i class="fa-solid fa-gift"></i>
+            <h3>Envío gratis desde $2.500</h3>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
+                Mercado Puntos.</p>
+        </article>
+        <article class="home__footer-article">
+            <i class="fa-solid fa-user-shield"></i>
+            <h3>Seguridad, de principio a fin</h3>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.</p>
+        </article>
 
-        <h3>Envío gratis desde $2.500</h3>
-        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
-            Mercado Puntos.</p>
 
-        <h3>Seguridad, de principio a fin</h3>
-        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-            porque estás siempre protegid@.</p>
-
-        <h3>Copyright © 1999-2020 MercadoLiebre S.R.L.</h3>
+        <p class="home__footer-copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </footer>
 </body>
