modified: home.html

--- a/views/home.html
+++ b/views/home.html
@@ -11,8 +11,10 @@
     <header>
         <img src="/img/logo-mercado-liebre.svg" alt="">
         <form action="/buscar" method="GET">
-            <input type="text" name="q" placeholder="Buscar...">
-            <button type="submit">Buscar</button>
+            <div>
+                <input type="text" name="q" placeholder="Buscar productos, marcar">
+                <button type="submit">Buscar</button>
+            </div>
         </form>
         <p>Comprá en cuotas y sin tarjeta de crédito</p>
         <div>
@@ -30,9 +32,10 @@
                 </ul>
             </nav>
         </div>
-        <img src="/img/img-home-banner.jpg" alt="" width="320">
+
     </header>
     <main>
+        <img src="/img/img-home-banner.jpg" alt="" width="320">
         <section>
             <h3>Basado en tu última visita</h3>
             <article>
@@ -60,7 +63,7 @@
                 <h2>SmartTv Samsung 43"</h2>
             </article>
         </section>
-        
+
         <section>
             <h3>Ofertas</h3>
             <article>
@@ -90,18 +93,22 @@
         </section>
     </main>
     <footer>
-        <h3>Pagá con tarjeta o en efectivo</h3>
-        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
-            puntos de pago. ¡Y siempre es seguro!</p>
+        <article>
+            <h3>Pagá con tarjeta o en efectivo</h3>
+            <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro!</p>
+        </article>
+        <article>
+            <h3>Envío gratis desde $2.500</h3>
+            <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
+                Mercado Puntos.</p>
+        </article>
+        <article>
+            <h3>Seguridad, de principio a fin</h3>
+            <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@.</p>
+        </article>
 
-        <h3>Envío gratis desde $2.500</h3>
-        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de productos. Es un beneficio de
-            Mercado Puntos.</p>
-
-        <h3>Seguridad, de principio a fin</h3>
-        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-            porque estás siempre protegid@.</p>
-
-        <h3>Copyright © 1999-2020 MercadoLiebre S.R.L.</h3>
+        <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </footer>
 </body>
