feat: diseño adaptativo de home.html con css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -27,6 +27,11 @@
   padding: 0;
 }
 
+h3 {
+  font-size: var(--titulos);
+  margin-top: 10px;
+}
+
 a {
   font-size: var(--textos);
   font-weight: 400;
@@ -61,12 +66,8 @@ body {
 
 .home__header__busqueda {
   margin-top: 8px;
-  margin-left: 15px;
-}
-
-.home__header__busqueda {
-  margin-top: 10px;
   margin-bottom: 10px;
+  margin-left: 15px;
 }
 
 .home__header__busqueda-barra {
@@ -82,10 +83,12 @@ body {
 }
 
 .home__header__nav-menu-superior {
+  display: none;
   margin-bottom: 20px;
 }
 
 .home__header__nav-menu-inferior {
+  display: none;
   margin-bottom: 20px;
 }
 
@@ -103,6 +106,54 @@ body {
   font-size: 1.4rem;
   border-radius: 5px;
 }
+
+/* MAIN */
+
+.home__main {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.home__main__section {
+  width: 90%;
+  margin: 0 auto;
+}
+.home__main__section-productos {
+  margin: 10px auto 0px;
+}
+
+.home__main__section-productos-descripcion {
+  border-top: solid 1px var(--colorGrisClaro);
+  background-color: white;
+  padding: 15px;
+}
+
+.home__main__section-productos-descripcion i {
+  color: var(--colorVerde);
+  font-size: 14px;
+  border-radius: 50%;
+  padding: 4px;
+  border: solid 1px var(--colorVerde);
+  width: 2rem;
+  height: 2rem;
+}
+
+.precio {
+  font-size: var(--precios);
+  font-weight: bold;
+}
+
+.descuento {
+  color: var(--colorVerde);
+  font-size: var(--descuentos);
+}
+
+.home__main__section-productos-descripcion h5 {
+  display: none;
+  padding-top: 1.5rem;
+  font-size: var(--descripcion);
+}
+
 
 
 /* FOOTER */
@@ -128,4 +179,33 @@ body {
 .home__footer-copyright {
     margin-left: -20px;
     font-size: var(--textos);
+}
+
+
+/* PUNTOS DE CORTE */
+
+/* TABLET Y DESKTOP */
+
+@media(min-width: 361px){
+  /* HOME TABLET Y DESKTOP */
+  .home__header__nav-menu-superior {
+    display: inherit;
+  }
+  
+  .home__header__nav-menu-inferior {
+    display: inherit;
+  }
+  .home__header__div__burger-menu{
+    display: none;
+  }
+  .home__main__section-productos-descripcion h5 {
+    display: inherit;
+  }
+
+  /* MAIN TABLET Y DESKTOP */
+
+  .home__main__section-productos {
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);;
+  }
+  
 }
