--- a/views/home.html
+++ b/views/home.html
@@ -40,61 +40,85 @@
         </nav>
 
     </header>
-    <main>
-        <img src="/img/img-home-banner.jpg" alt="" width="320">
-        <section>
+    <main class="home__main">
+        <img class="home__main-banner" src="/img/img-home-banner.jpg" alt="" width="100%">
+        <section class="home__main__section">
             <h3>Basado en tu última visita</h3>
-            <article>
-                <img src="/img/img-cafetera-moulinex.jpg" alt="" width="320">
-                <p>$6.770</p>
-                <p>40% OFF</p>
-                <h2>Cafetera Moulinex</h2>
+            <article class="home__main__section-productos">
+                <img src="/img/img-cafetera-moulinex.jpg" alt="" width="100%">
+                <div class="home__main__section-productos-descripcion">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% OFF</p>
+                    <h5>Cafetera Moulinex</h5>
+                </div>
             </article>
-            <article>
-                <img src="/img/img-macbook-pro-2019.jpg" alt="" width="320">
-                <p>$230.000</p>
-                <p>20% OFF</p>
-                <h2>MacBook Pro 2019</h2>
+            <article class="home__main__section-productos">
+                <img src="/img/img-macbook-pro-2019.jpg" alt="" width="100%">
+                <div class="home__main__section-productos-descripcion">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% OFF</p>
+                    <h5>MacBook Pro 2019</h5>
+                </div>
             </article>
-            <article>
-                <img src="/img/img-samsung-galaxy-s10.jpg" alt="" width="320">
-                <p>$70.500</p>
-                <p>10% OFF</p>
-                <h2>Samsung Galaxy S10</h2>
+            <article class="home__main__section-productos">
+                <img src="/img/img-samsung-galaxy-s10.jpg" alt="" width="100%">
+                <div class="home__main__section-productos-descripcion">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% OFF</p>
+                    <h5>Samsung Galaxy S10</h5>
+                </div>
             </article>
-            <article>
-                <img src="/img/img-tv-samsung-smart.jpg" alt="" width="320">
-                <p>$23.200</p>
-                <p>5% OFF</p>
-                <h2>SmartTv Samsung 43"</h2>
+            <article class="home__main__section-productos">
+                <img src="/img/img-tv-samsung-smart.jpg" alt="" width="100%">
+                <div class="home__main__section-productos-descripcion">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% OFF</p>
+                    <h5>SmartTv Samsung 43"</h5>
+                </div>
             </article>
         </section>
 
-        <section>
+        <section class="home__main__section">
             <h3>Ofertas</h3>
-            <article>
-                <img src="/img/img-cafetera-moulinex.jpg" alt="" width="320">
-                <p>$6.770</p>
-                <p>40% OFF</p>
-                <h2>Cafetera Moulinex</h2>
+            <article class="home__main__section-productos">
+                <img src="/img/img-cafetera-moulinex.jpg" alt="" width="100%">
+                <div class="home__main__section-productos-descripcion">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% OFF</p>
+                    <h5>Cafetera Moulinex</h5>
+                </div>
             </article>
-            <article>
-                <img src="/img/img-macbook-pro-2019.jpg" alt="" width="320">
-                <p>$230.000</p>
-                <p>20% OFF</p>
-                <h2>MacBook Pro 2019</h2>
+            <article class="home__main__section-productos">
+                <img src="/img/img-macbook-pro-2019.jpg" alt="" width="100%">
+                <div class="home__main__section-productos-descripcion">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% OFF</p>
+                    <h5>MacBook Pro 2019</h5>
+                </div>
             </article>
-            <article>
-                <img src="/img/img-samsung-galaxy-s10.jpg" alt="" width="320">
-                <p>$70.500</p>
-                <p>10% OFF</p>
-                <h2>Samsung Galaxy S10</h2>
+            <article class="home__main__section-productos">
+                <img src="/img/img-samsung-galaxy-s10.jpg" alt="" width="100%">
+                <div class="home__main__section-productos-descripcion">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% OFF</p>
+                    <h5>Samsung Galaxy S10</h5>
+                </div>
             </article>
-            <article>
-                <img src="/img/img-tv-samsung-smart.jpg" alt="" width="320">
-                <p>$23.200</p>
-                <p>5% OFF</p>
-                <h2>SmartTv Samsung 43"</h2>
+            <article class="home__main__section-productos">
+                <img src="/img/img-tv-samsung-smart.jpg" alt="" width="100%">
+                <div class="home__main__section-productos-descripcion">
+                    <i class="fa-solid fa-truck"></i>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% OFF</p>
+                    <h5>SmartTv Samsung 43"</h5>
+                </div>
             </article>
         </section>
     </main>
