feat: register.html y ruta en app.js

--- a/views/home.html
+++ b/views/home.html
@@ -11,18 +11,24 @@
 
 <body>
     <header class="home__header">
+
         <div class="home__header__container-desktop-tablet">
+
             <div class="home__header__logo">
                 <a href="/"><img src="/img/logo-mercado-liebre.svg" alt=""></a>
+
                 <div class="home__header__busqueda">
                     <form action="/buscar" method="GET">
                         <input type="text" name="q" placeholder="Buscar productos, marcar">
                         <button type="submit"><i class="fas fa-search"></i></button>
                     </form>
                 </div>
+
             </div>
+
             <p class="home__header__p-pagos"><i class="fas fa-hand-holding-usd"></i>Comprá en cuotas y sin tarjeta de
                 crédito</p>
+
         </div>
         <nav class="home__header__nav-menu">
             <ul class="home__header__nav-menu-superior">
@@ -32,7 +38,7 @@
                 <li><a href="#">Ayuda</a></li>
             </ul>
             <ul class="home__header__nav-menu-inferior">
-                <li><a href="#">Creá tu cuenta</a> <i class="fa-regular fa-address-card"></i></li>
+                <li><a href="/register">Creá tu cuenta</a> <i class="fa-regular fa-address-card"></i></li>
                 <li><a href="#">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i></li>
                 <li><a href="#">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i></li>
             </ul>
