feat: formulario de registro y login html

--- a/views/home.html
+++ b/views/home.html
@@ -39,7 +39,7 @@
             </ul>
             <ul class="home__header__nav-menu-inferior">
                 <li><a href="/register">Creá tu cuenta</a> <i class="fa-regular fa-address-card"></i></li>
-                <li><a href="#">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i></li>
+                <li><a href="login">Ingresá</a> <i class="fa-solid fa-right-to-bracket"></i></li>
                 <li><a href="#">Mis compras</a> <i class="fa-solid fa-basket-shopping"></i></li>
             </ul>
         </nav>
