--- a/views/home.html
+++ b/views/home.html
@@ -56,7 +56,9 @@
             <h3>Basado en tu última visita</h3>
             <div class="home__main__container-productos">
                 <article class="home__main__section-productos">
+
                     <img src="/img/img-cafetera-moulinex.jpg" alt="">
+
                     <div class="home__main__section-productos-descripcion">
                         <i class="fa-solid fa-truck"></i>
                         <p class="precio">$6.770</p>
@@ -139,7 +141,8 @@
         </section>
     </main>
     <footer class="home__footer">
-        <article class="home__footer-article">
+        <div class="home__footer-div">
+          <article class="home__footer-article">
             <i class="fa-solid fa-credit-card"></i>
             <h3>Pagá con tarjeta o en efectivo</h3>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
@@ -156,9 +159,8 @@
             <h3>Seguridad, de principio a fin</h3>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
-        </article>
-
-
+        </article>  
+        </div>
         <p class="home__footer-copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </footer>
 </body>
