--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -65,6 +65,10 @@
   font-size: 20px;
 }
 
+.register__main__form-button-submit:hover {
+  background-color: #0022aa;
+}
+
 .register__main__form-button-reset {
   background-color: var(--colorCeleste);
   color: white;
@@ -72,6 +76,10 @@
   padding: 5px 20px;
   border-radius: 5px;
   font-size: 20px;
+}
+
+.register__main__form-button-reset:hover {
+  background-color: #0022aa;
 }
 
 .login__main__form-button-submit {
@@ -82,4 +90,8 @@
   padding: 5px;
   border-radius: 5px;
   font-size: 20px;
+}
+
+.login__main__form-button-submit:hover {
+  background-color: #0022aa;
 }
