--- a/views/login.html
+++ b/views/login.html
@@ -78,7 +78,8 @@
         </form>
     </main>
     <footer class="home__footer">
-        <article class="home__footer-article">
+        <div class="home__footer-div">
+          <article class="home__footer-article">
             <i class="fa-solid fa-credit-card"></i>
             <h3>Pagá con tarjeta o en efectivo</h3>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
@@ -95,9 +96,8 @@
             <h3>Seguridad, de principio a fin</h3>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
-        </article>
-
-
+        </article>  
+        </div>
         <p class="home__footer-copyright">Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
     </footer>
 </body>
